--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 
-<body>
+<body ng-controller="DKMHAppController">
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">DKMHBid</a>
+                <a class="navbar-brand" href="/">DKMHBid</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -40,14 +40,24 @@
                     </li>
                 </ul>
 
-                <ul class="nav navbar-nav navbar-right">
+                <ul ng-if="!currentUser" class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Sign In</a>
+                        <a href="/sign-in">Sign In</a>
                     </li>
                     <li>
-                        <a href="#">Register</a>
+                        <a href="/register">Register</a>
                     </li>
                 </ul>
+
+                <ul ng-if="currentUser" class="nav navbar-nav navbar-right">
+                    <li>
+                        <a>Signed in as {{currentUser.email}}</a>
+                    </li>
+                    <li>
+                        <a style="cursor: pointer" ng-click="doSignOut()">Sign Out</a>
+                    </li>
+                </ul>
+
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -55,6 +65,14 @@
     </nav>
     <!-- Page Content -->
     <div class="container">
+        <div ng-show="successMsg" class="col-md-8 col-md-offset-2 alert alert-success" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <strong>Success! </strong> {{successMsg}}
+        </div>
+        <div ng-show="errorMsg" class="col-md-8 col-md-offset-2 alert alert-danger" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <strong>Error! </strong> {{errorMsg}}
+        </div>
         <div class="ng-view">
             <!--TODO views go here-->
         </div>
@@ -76,15 +94,16 @@
     <!-- SCRIPTS -->
     <!-- Libraries -->
     <script type="text/javascript" src="libs/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="libs/firebase.js"></script>
     <script type="text/javascript" src="libs/angular.min.js"></script>
     <script type="text/javascript" src="libs/angular-route.min.js"></script>
     <script type="text/javascript" src="libs/angularfire.min.js"></script>
     <script type="text/javascript" src="libs/bootstrap.min.js"></script>
     <!-- Custom scripts -->
+    <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/controllers.js"></script>
     <script type="text/javascript" src="js/directives.js"></script>
     <script type="text/javascript" src="js/filters.js"></script>
-    <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
 
