Add ability to insert new items

--- a/public/templates/sign-in.html
+++ b/public/templates/sign-in.html
@@ -1,14 +1,15 @@
 <div class="row" ng-controller="SignInController">
     <div class="col-md-8 col-md-offset-2">
         <h1>Sign In</h1>
+        <hr/>
         <form>
             <div class="form-group">
                 <label for="signin-username">Username</label>
-                <input type="text" class="form-control" id="signin-username" placeholder="Username" ng-model="signInEmail">
+                <input required type="text" class="form-control" id="signin-username" placeholder="Username" ng-model="signInEmail">
             </div>
             <div class="form-group">
                 <label for="signin-password">Password</label>
-                <input type="password" class="form-control" id="signin-password" placeholder="Password" ng-model="signInPassword">
+                <input required type="password" class="form-control" id="signin-password" placeholder="Password" ng-model="signInPassword">
             </div>
             <button type="submit" class="btn btn-default" ng-click="doSignIn()">Sign In</button>
         </form>
