--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-controller="MainController">
     <div class="col-md-3">
         <p class="lead">Live Auctions</p>
         <div class="list-group">
@@ -41,89 +41,22 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-lg-4 col-md-4">
+
+            <!-- LIST OF ITEMS -->
+            <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="item in allItems">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/320x150" alt="">
+                    <img ng-src="{{item.image}}" alt="">
                     <div class="caption">
-                        <h4 class="pull-right">$24.99</h4>
-                        <h4><a href="#">First Product</a>
+                        <h4 class="pull-right">${{item.currentPrice}}</h4>
+                        <h4><a href="#">{{item.name}}</a>
                         </h4>
-                        <p class="bid-last-user pull-right">username1</p>
-                        <h4 class="bid-time">00:02:15</h4>
+                        <p class="bid-last-user pull-right">{{item.currentBuyerEmail}}</p>
+                        <h4 class="bid-time">{{item.expiredDate | timeLeft}}</h4>
                         <button class="bid-btn btn btn-primary">Bid Now</button>
                     </div>
                 </div>
             </div>
 
-            <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/320x150" alt="">
-                    <div class="caption">
-                        <h4 class="pull-right">$13.99</h4>
-                        <h4><a href="#">Second Product</a>
-                        </h4>
-                        <p class="bid-last-user pull-right">username2</p>
-                        <h4 class="bid-time">00:01:25</h4>
-                        <button class="bid-btn btn btn-primary">Bid Now</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/320x150" alt="">
-                    <div class="caption">
-                        <h4 class="pull-right">$24.99</h4>
-                        <h4><a href="#">Third Product</a>
-                        </h4>
-                        <p class="bid-last-user pull-right">username1</p>
-                        <h4 class="bid-time">00:02:15</h4>
-                        <button class="bid-btn btn btn-primary">Bid Now</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/320x150" alt="">
-                    <div class="caption">
-                        <h4 class="pull-right">$24.99</h4>
-                        <h4><a href="#">Fourth Product</a>
-                        </h4>
-                        <p class="bid-last-user pull-right">username1</p>
-                        <h4 class="bid-time">00:02:15</h4>
-                        <button class="bid-btn btn btn-primary">Bid Now</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/320x150" alt="">
-                    <div class="caption">
-                        <h4 class="pull-right">$24.99</h4>
-                        <h4><a href="#">Fifth Product</a>
-                        </h4>
-                        <p class="bid-last-user pull-right">username1</p>
-                        <h4 class="bid-time">00:02:15</h4>
-                        <button class="bid-btn btn btn-primary">Bid Now</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/320x150" alt="">
-                    <div class="caption">
-                        <h4 class="pull-right">$24.99</h4>
-                        <h4><a href="#">Sixth Product</a>
-                        </h4>
-                        <p class="bid-last-user pull-right">username1</p>
-                        <h4 class="bid-time">00:02:15</h4>
-                        <button class="bid-btn btn btn-primary">Bid Now</button>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </div>
