--- a/views/index.html
+++ b/views/index.html
@@ -28,15 +28,12 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-left">
+                <ul ng-hide="!currentUser" class="nav navbar-nav navbar-left">
                     <li>
-                        <a href="#">About</a>
+                        <a href="/my-items">My Items</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
+                        <a href="/history">Auction History</a>
                     </li>
                 </ul>
 
@@ -94,16 +91,17 @@
     <!-- SCRIPTS -->
     <!-- Libraries -->
     <script type="text/javascript" src="libs/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="libs/moment.min.js"></script>
     <script type="text/javascript" src="libs/firebase.js"></script>
     <script type="text/javascript" src="libs/angular.min.js"></script>
     <script type="text/javascript" src="libs/angular-route.min.js"></script>
     <script type="text/javascript" src="libs/angularfire.min.js"></script>
     <script type="text/javascript" src="libs/bootstrap.min.js"></script>
     <!-- Custom scripts -->
+    <script type="text/javascript" src="js/filters.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/controllers.js"></script>
     <script type="text/javascript" src="js/directives.js"></script>
-    <script type="text/javascript" src="js/filters.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
 
