--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -22,13 +22,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                            <img class="slide-image" ng-src="http://placehold.it/800x300" alt="">
                         </div>
                         <div class="item">
-                            <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                            <img class="slide-image" ng-src="http://placehold.it/800x300" alt="">
                         </div>
                         <div class="item">
-                            <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                            <img class="slide-image" ng-src="http://placehold.it/800x300" alt="">
                         </div>
                     </div>
                     <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -43,20 +43,40 @@
         <div class="row">
 
             <!-- LIST OF ITEMS -->
-            <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="item in allItems">
+            <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="item in allItems" data-itemid="{{item.$id}}">
                 <div class="thumbnail">
                     <img ng-src="{{item.image}}" alt="">
-                    <div class="caption">
+                    <div class="caption text-center">
                         <h4 class="pull-right">${{item.currentPrice}}</h4>
                         <h4><a href="#">{{item.name}}</a>
                         </h4>
-                        <p class="bid-last-user pull-right">{{item.currentBuyerEmail}}</p>
+                        <p class="bid-last-user pull-right">{{item.currentBuyerEmail | semanticValue}}</p>
                         <h4 class="bid-time">{{item.expiredDate | timeLeft}}</h4>
-                        <button class="bid-btn btn btn-primary">Bid Now</button>
+                        <input type="number" class="bid-value-input form-control" ng-model="item.newPrice"/>
+                        <a class="bid-submit-btn btn btn-primary" ng-click="setCurrentItem(item.$id, item.name, item.newPrice, item.currentPrice)">Bid Now</a>
                     </div>
                 </div>
             </div>
 
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="submit-bid-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Confirm submitting bid</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to submit bid for <strong>{{currentItem.name}}</strong> for <strong>{{currentItem.value}}$</strong> ?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+                    <a class="btn btn-primary btn-confirm-bid" ng-click="submitBid()" data-currentitemid="{{currentItem.id}}">Yes</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
