--- a/public/templates/my-items.html
+++ b/public/templates/my-items.html
@@ -2,7 +2,10 @@
     <div class="col-md-12 col-lg-12 col-xs-12">
         <h1>My Items</h1>
         <hr/>
-        <button class="btn btn-primary" data-toggle="modal" data-target="#add-new-item-modal">Add new item</button>
+        <button class="btn btn-primary" data-toggle="modal" data-target="#add-new-item-modal">
+            <i class="glyphicon glyphicon-plus"></i>
+            Add new item
+        </button>
         <hr/>
         <table class="table table-hover">
             <thead>
@@ -20,7 +23,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in myItems" data-itemid="{{item.$id}}">
+                <tr ng-repeat="item in myItems" data-myitemid="{{item.$id}}">
                     <td>{{ $index + 1}}</td>
                     <td>{{item.name}}</td>
                     <td>{{item.description | semanticValue}}</td>
@@ -31,9 +34,12 @@
                     <td>{{item.startingPrice}}</td>
                     <td>{{item.currentPrice}}</td>
                     <td>{{item.status | semanticValue}}</td>
-                    <td>{{item.buyerEmail | semanticValue}}</td>
+                    <td>{{item.currentBuyerEmail | semanticValue}}</td>
                     <td>
-                        <button class="btn btn-danger">Remove</button>
+                        <button class="btn btn-danger">
+                            <i class="glyphicon glyphicon-trash"></i>
+                            Remove
+                        </button>
                     </td>
                 </tr>
             </tbody>
