--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/sweet-alert.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 
@@ -103,6 +104,7 @@
     <script type="text/javascript" src="libs/angular-route.min.js"></script>
     <script type="text/javascript" src="libs/angularfire.min.js"></script>
     <script type="text/javascript" src="libs/bootstrap.min.js"></script>
+    <script type="text/javascript" src="libs/sweet-alert.min.js"></script>
     <!-- Custom scripts -->
     <script type="text/javascript" src="js/filters.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
