--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -43,7 +43,13 @@
         <div class="row">
 
             <!-- LIST OF ITEMS -->
-            <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="item in allItems" data-itemid="{{item.$id}}">
+            <div style="text-align:center;" ng-hide="allItems.length > 0">
+                <br>
+                <h3><span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span></h3>
+                Loading...
+                <br>
+            </div>
+            <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="item in allItems" data-itemid="{{item.$id}}" ng-show="allItems.length > 0">
                 <div class="thumbnail">
                     <img ng-src="{{item.image}}" alt="">
                     <div class="caption text-center">
