--- a/templates/main.html
+++ b/templates/main.html
@@ -1,19 +1,3 @@
-<!-- <div class="row">
-    <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="item in allItems" data-itemid="{{item.$id}}">
-        <div class="thumbnail">
-            <img ng-src="{{item.image}}" alt="">
-            <div class="caption text-center">
-                <h4 class="pull-right">${{item.currentPrice}}</h4>
-                <h4><a href="#">{{item.name}}</a>
-                        </h4>
-                <p class="bid-last-user pull-right">{{item.currentBuyerEmail | semanticValue}}</p>
-                <h4 class="bid-time">{{item.expiredDate | timeLeft}}</h4>
-                <input type="number" class="bid-value-input form-control" ng-model="item.newPrice" />
-                <a class="bid-submit-btn btn btn-primary" ng-click="setCurrentItem(item.$id, item.name, item.newPrice, item.currentPrice)">Bid Now</a>
-            </div>
-        </div>
-    </div>
-</div> -->
 <div ng-controller="MainController">
     <div class="loading-container" ng-hide="allItems.length > 0">
         <br>
@@ -46,11 +30,11 @@
                         {{item.description}}
                     </div>
                     <div class="card-panel">
-                        <a class="button bid-btn" title="Bid now" ng-click="setCurrentItem(item.$id, item.name, item.newPrice, item.currentPrice)"></a>
+                        <a class="button bid-btn" href="#" title="Bid now" ng-click="setCurrentItem(item.$id, item.name, item.newPrice, item.currentPrice)"></a>
                         <div class="item-name">
                             <b>{{item.name | uppercase}}</b>
                             <br>
-                            End: {{item.expiredDate | timeLeft}}
+                            <timer end-time="item.expiredDate">{{days}} days, {{hours}}h : {{minutes}}m : {{seconds}}s.</timer>
                         </div>
                         <table class="timing">
                             <tr>
@@ -64,7 +48,7 @@
                             </tr>
                         </table>
                         <div class="price-box">
-                            <input type="number" min="{{item.currentPrice}}" class="input-price" placeholder="value">
+                            <input type="number" class="input-price" ng-model="item.newPrice">
                         </div>
                         <div class="bid-user">
                             {{item.currentBuyerEmail | semanticValue}}
