--- a/templates/main.html
+++ b/templates/main.html
@@ -34,7 +34,7 @@
                         <div class="item-name">
                             <b>{{item.name | uppercase}}</b>
                             <br>
-                            <timer end-time="item.expiredDate">{{days}} days, {{hours}} hours, {{minutes}} minutes</timer>
+                            <timer end-time="item.expiredDate">{{days}} days, {{hours}} hours, {{minutes}} mins, {{seconds}} secs</timer>
                         </div>
                         <table class="timing">
                             <tr>
