--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #4285f4;
+    background-color: #39C;
 }
 
 @font-face {
@@ -22,7 +22,7 @@ body {
 .header {
     box-sizing: border-box;
     height: 138px;
-    background-color: #4285f4;
+    background-color: #39C;
 }
 
 .header .user-panel {
@@ -279,7 +279,7 @@ table.timing .end-time {
 }
 
 .footer {
-    background-color: #4285f4;
+    background-color: #39C;
     height: 55px;
 }
 
@@ -300,4 +300,75 @@ ul.links li {
     font-size: 18.51px;
     float: right;
     margin-top: 15px;
+}
+
+/*Forms*/
+button{
+  width:100px;
+  background:#3399cc;
+  display:block;
+  margin:0 auto;
+  margin-top:1%;
+  padding:10px;
+  text-align:center;
+  text-decoration:none;
+  color:#fff;
+  cursor:pointer;
+  transition:background .3s;
+  -webkit-transition:background .3s;
+}
+
+button:hover{
+  background:#2288bb;
+}
+
+.auth-form {
+  width:400px;
+  margin:0 auto;
+  margin-top:8px;
+  margin-bottom:2%;
+  transition:opacity 1s;
+  -webkit-transition:opacity 1s;
+}
+
+.auth-form h1{
+  background:#3399cc;
+  padding:20px 0;
+  font-size:140%;
+  font-weight:300;
+  text-align:center;
+  color:#fff;
+}
+
+form{
+  background:#f0f0f0;
+  padding:6% 4%;
+}
+
+input[type="email"],input[type="password"]{
+  width:92%;
+  background:#fff;
+  margin-bottom:4%;
+  border:1px solid #ccc;
+  padding:4%;
+  font-family:'Open Sans',sans-serif;
+  font-size:95%;
+  color:#555;
+}
+
+input[type="submit"]{
+  width:100%;
+  background:#3399cc;
+  border:0;
+  padding:4%;
+  font-family:'Open Sans',sans-serif;
+  font-size:100%;
+  color:#fff;
+  cursor:pointer;
+  transition:background .3s;
+  -webkit-transition:background .3s;
+}
+
+input[type="submit"]:hover{
+  background:#2288bb;
 }
