--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,5 @@
 <div ng-controller="MainController">
-    <div class="loading-container" ng-if="!(allItems.length > 0)">
+    <div class="loading-container" ng-if="loadingItems">
         <br>
         <br>
         <br>
@@ -15,7 +15,11 @@
             <div class="cssload-side"></div>
         </div>
     </div>
-    <ul class="card-list" ng-if="allItems.length > 0">
+    <ul class="card-list" ng-if="!loadingItems">
+        <div ng-if="allItems.length == 0">
+        <h3>No active bids...</h3>
+        Please come again later, or add your own items for bidding :)
+        </div>
         <li ng-repeat="item in allItems" data-itemid="{{item.$id}}">
             <div class="card-container">
                 <img src="images/price-marker.png" class="price-maker-bottom">
