--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -1,6 +1,6 @@
 <div ng-controller="SignInController">
-    <div class="auth-form">
-        <h1>Sign in</h1>
+    <div class="custom-form">
+        <h1>Sign In</h1>
         <form ng-submit="doSignIn()">
             <input type="email" placeholder="Email" ng-model="signInEmail" required/>
             <input type="password" placeholder="Password" ng-model="signInPassword" required/>
