--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -1,11 +1,11 @@
-<div class="row" ng-controller="RegisterController">
-    <div class="auth-form">
-        <h1>Register</h1>
+<div ng-controller="RegisterController">
+    <div class="custom-form">
+        <h1>Sign Up</h1>
         <form ng-submit="doRegister()">
             <input type="email" placeholder="Email" ng-model="registerEmail" required/>
             <input type="password" placeholder="Password" ng-model="registerPassword" required/>
             <input type="password" placeholder="Retype Password" ng-model="registerRetypePassword" required/>
-            <input type="submit" value="Register" />
+            <input type="submit" value="Sign up" />
         </form>
     </div>
 </div>
