--- a/css/custom.css
+++ b/css/custom.css
@@ -60,9 +60,8 @@ body {
 
 ul.custom-nav {
     list-style-type: none;
-    position: absolute;
-    bottom: 0;
-    left: 225px;
+    padding-bottom: 0;
+    text-align: center;
 }
 
 ul.custom-nav li {
