--- a/css/custom.css
+++ b/css/custom.css
@@ -103,7 +103,7 @@ ul.custom-nav li .director {
 
 ul.card-list {
     list-style-type: none;
-    padding: 10px 0;
+    /*padding: 10px 0;*/
 }
 
 ul.card-list li {
