--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,4 @@
-<div ng-controller="MainController">
+<div ng-controller="MainController" class="scroll-wheel">
     <div class="loading-container" ng-if="loadingItems">
         <br>
         <br>
