--- a/css/custom.css
+++ b/css/custom.css
@@ -436,3 +436,46 @@ textarea {
     transition: 0.6s;
     transform-style: preserve-3d;
 }
+
+/* Styles for '/my-items' */
+.my-item-image{
+    max-width: 200px;
+}
+
+.table-container{
+    width: 1100px;
+    margin: 0 auto;
+}
+
+.table-header.active{
+    text-align: center;
+    font-size: 20px;
+    background-color: green;
+    color: white;
+}
+
+.table-header.expired{
+    text-align: center;
+    font-size: 20px;
+    background-color: red;
+    color: white;
+}
+
+.my-items-table {
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+
+.my-items-table th {
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.my-items-table td {
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.my-items-table-nodata{
+    text-align: center;
+}
