--- a/css/custom.css
+++ b/css/custom.css
@@ -28,12 +28,80 @@ body {
 .header .user-panel {
     position: absolute;
     background-color: white;
-    border-radius: 10px;
-    padding: 10px;
-    height: 80px;
+    border-radius: 5px 5px 0 0;
+    /*padding: 10px;*/
+    /*height: 80px;*/
     right: -30px;
     top: 18px;
     width: 180px;
+    box-shadow: 0 0 10px 0 #5f5e5e;
+    overflow: hidden;
+    z-index: 2;
+}
+.user-panel .usename {
+    width: 100%;
+    background-color: #2855a0;
+    padding: 10px;
+    margin: 0;
+    color: #ffffff;
+    box-sizing: border-box;
+}
+.user-panel .button-list {
+    list-style-type: none;
+}
+
+.user-panel .button-list li {
+    /*display: inline-block;*/
+    width: 50%;
+    height: 100%;
+    /*vertical-align: top;*/
+    box-sizing: border-box;
+}
+.user-panel .button-list li:first-child {
+    float: left;
+    /*border-right: 1px solid #ffffff;*/
+}
+.user-panel .button-list li:nth-child(2) {
+    float: right;
+    /*border-left: 1px solid #ffffff;*/
+}
+#balance {
+    padding: 5px;
+}
+.table-btn {
+    width: 100%;
+    text-align: center;
+}
+.table-btn td {
+    padding: 5px;
+    background-color: #4bb549;
+    margin: 0;
+}
+.table-btn td:hover {
+    background-color: #399138;
+}
+.option-btn {
+    text-decoration: none;
+    font-size: 12px;
+    color: #ffffff;
+}
+.user-panel .sign-button {
+    width: 100%;
+    height: 100%;
+    /*border-radius: 100px;*/
+    background-color: #4bb549;
+    text-decoration: none;
+    color: #ffffff;
+    /*box-shadow: 0 0 10px 0 #5f5e5e;*/
+    font-size: 15px;
+    font-family: MyriadPro;
+    line-height: 45px;
+    transition: all 0.2s;
+    /*outline: 1px solid red;*/
+    /*position: absolute;*/
+}
+.user-panel .sign-button:hover {
+    background-color: #399138;
 }
 
 .container {
@@ -62,15 +130,17 @@ ul.custom-nav {
     list-style-type: none;
     padding-bottom: 0;
     text-align: center;
+    position: relative;
+    bottom: -15px;
 }
 
 ul.custom-nav li {
     display: inline-block;
     height: 55px;
     /*width: 163px;*/
-    /*box-sizing: border-box;*/
+    box-sizing: border-box;
     vertical-align: bottom;
-    padding: 10px 0;
+    /*padding: 10px 0;*/
     transition: all 0.2s;
 }
 
@@ -84,8 +154,10 @@ ul.custom-nav li .director {
     font-family: 'MyriadPro';
     text-decoration: none;
     color: #ffffff;
-    line-height: 79px;
+    line-height: 55px;
     padding: 0 10px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 
@@ -103,12 +175,11 @@ ul.custom-nav li .director {
 
 ul.card-list {
     list-style-type: none;
-    /*padding: 10px 0;*/
 }
 
 ul.card-list li {
     display: inline-block;
-    padding: 0 10px;
+    padding: 10px 10px;
     vertical-align: top;
 }
 
@@ -133,6 +204,10 @@ ul.card-list li {
     -moz-perspective: 1000;
     -o-perspective: 1000;
     perspective: 1000;
+}
+
+.card-list li {
+    padding: 10px 0;
 }
 
 .card:hover .card-panel {
